[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs_game"
version = "0.0.1"
authors = [
    { name = "Patrick McQuay", email = "patrick.mcquay@gmail.com" },
]
description = "Package to play Leder Games' Arcs board game"
readme = "README.md"
requires-python = ">=3.8"
